--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18"
   },
